--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -37,7 +37,7 @@
   background-size: contain
   background-repeat: no-repeat
   background-position: center
-  height: 1700px
+  height: 1750px
   margin-inline: -.5rem !important
 .tarjeta--azul
   background-image: url("../assets/curso/images/tema3/back_1.svg")
@@ -58,7 +58,7 @@
   margin-top: -380px
 .jumbotron
   background-color: #F7F7F1
-  height: 420px
+  height: 480px
 .jumbotron-1
   background-color: #EEF0E3
   height: 390px
@@ -75,7 +75,7 @@
   border-top-left-radius: 1rem
 .jumbotron-3
   background-color: #F9E9E9
-  height: 550px
+  height: 420px
 .jumbotron-4
 	padding: 2rem 1rem 
 	margin-bottom: 2rem 
@@ -91,6 +91,9 @@
 	margin-bottom: 2rem 
 	background-color: #F7F7F1
 	border-radius: 2rem
+.jumbotron-7
+  background-color: #F9E9E9
+  height: 530px
 .bloque-texto-b.color-secundario::before 
     background-color: #F7F7F1
 .bloque-texto-b i 
