--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -10,20 +10,13 @@
   background-image: url("../assets/curso/images/tema1/back_5.svg")
   background-size: contain
   background-repeat: no-repeat
-  background-position: right
-.tarjeta_Sp-4
+  background-position: right bottom
+.tarjeta_Sp-4  
   background-image: url("../assets/curso/images/tema1/back_1.svg")
   background-size: cover
   background-repeat: no-repeat
   background-position: center
-  height: 420px
-  margin-left: 160px
-  margin-right: 160px
-  margin-top: 50px
-  border-bottom-right-radius: 1rem
-  border-bottom-left-radius: 1rem
-  border-top-right-radius: 1rem
-  border-top-left-radius: 1rem
+  border-radius: 1rem  
 .tarjeta_Sp-5
   background-image: url("../assets/curso/images/tema1/back_3.svg")
   background-size: contain
@@ -229,6 +222,21 @@
 	background-color: #12263F !important
 
 
+// Floating icon - Card- bottom
+
+.clr_crd
+  padding: 2rem
+  background-color: #f7f7f1
+.clr_crd_quote
+  background-color: #f7f7f1
+.floatin_icon
+  position: absolute
+  bottom: -45px
+  left: 50%
+  transform: translateX(-50%)
+
+.curso-main-container > .container
+  overflow-x: initial !important
 
 
 
